fix: fixed createTicket and bookTicket, updated swagger
